k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: front-gw
      namespace: envoy-gateway-system
  hostnames:
    - hearth.umceko.com
  rules:
    - backendRefs:
        - name: website
          port: 80
